<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".fragments.SignUpPageFragment">

<!-- TODO: Update blank fragment layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/login_signup_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/singUpMainTitle"
        android:layout_width="334dp"
        android:layout_height="78dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/meta_pro_bold"
        android:text="@string/registrarse_y_empezar_a_transferir"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/signUpMainLinearLayout"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnCrearCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singUpMainTitle">

        <TextView
            android:id="@+id/signUpNombre"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="bottom"
            android:text="@string/nombre" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpNombreInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"

            app:boxStrokeColor="#094464">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresar_nombre" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/signUpApellido"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="bottom"
            android:text="@string/apellido" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpApellidoInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"

            app:boxStrokeColor="#094464">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresar_apellido" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/loginEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:ems="10"
            android:gravity="bottom"

            android:text="@string/email_first_upper" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="#094464">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/ingresar_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/ingresarPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/ingresar_contrasenia" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="#094464"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingresar_contrasenia"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/reingresarPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/reingresar_contrasenia" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="#094464"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtInputConfirmaContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reingresar_contrasenia"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="bottom"
            android:text="@string/seleccione_moneda" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/monedaLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Moneda">

            <AutoCompleteTextView
                android:id="@+id/monedaDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/crear_cuenta"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@+id/txtYaTieneCuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtYaTieneCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Ya tienes una cuenta?"
        android:textColor="@color/lightblue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>







