<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/superiorFrameLayout"
            android:layout_width="0dp"
            android:layout_height="295dp"
            android:background="@drawable/home_page_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.card.MaterialCardView
                                android:layout_width="70dp"
                                android:layout_height="70dp"
                                android:textAlignment="center"
                                app:cardCornerRadius="50dp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageView
                                    android:id="@+id/usuarioProfileImg"
                                    android:layout_width="72dp"
                                    android:layout_height="match_parent"
                                    android:layout_marginEnd="16dp"
                                    android:adjustViewBounds="true"
                                    android:clipToOutline="true"
                                    android:contentDescription="TODO"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/avatar_6" />
                            </com.google.android.material.card.MaterialCardView>

                            <TextView
                                android:id="@+id/inicioText"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/meta_pro_bold"
                                android:text="@string/inicio"
                                android:textColor="@color/white"
                                android:textSize="14sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </FrameLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp"

                        />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/campanitaIcon"
                                android:layout_width="42dp"
                                android:layout_height="34dp"
                                android:layout_marginEnd="16dp"
                                android:layout_marginBottom="16dp"
                                android:contentDescription="TODO"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:srcCompat="@drawable/campanita" />

                            <TextView
                                android:id="@+id/greetingText"
                                android:layout_width="match_parent"
                                android:layout_height="45dp"
                                android:fontFamily="@font/meta_pro_bold"
                                android:gravity="center|left"
                                android:text="@string/hola_usuario"
                                android:textColor="#CBDEDEDE"
                                android:textSize="16sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/balanceText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/meta_pro_bold"
                                android:gravity="center|left"
                                android:text="@string/balance_total"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/greetingText" />

                            <TextView
                                android:id="@+id/actualBalanceText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/meta_pro_bold"
                                android:gravity="center|left"
                                android:text="$124.57"
                                android:textColor="@color/white"
                                android:textSize="50sp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/balanceText" />

                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </FrameLayout>

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/inferiorFrameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/superiorFrameLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/frameLayoutEmptyTransactions"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <include layout="@layout/empty_transactions_layout" />
                </FrameLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/enviarDineroButton"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_weight="13"
                        android:backgroundTint="@color/green"
                        android:text="@string/enviar_dinero"
                        android:textColor="@color/black"
                        app:cornerRadius="15dp"
                        app:icon="@drawable/flyarrowup"
                        app:iconGravity="textStart"
                        app:iconPadding="2dp"
                        app:iconSize="30dp"
                        app:iconTint="@color/black" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5" />


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/ingresarDineroButton"
                        android:layout_width="0dp"
                        android:layout_height="65dp"
                        android:layout_weight="13"
                        android:text="@string/ingresar_dinero"
                        app:cornerRadius="15dp"
                        app:icon="@drawable/flyarrowdown"
                        app:iconGravity="textStart"
                        app:iconPadding="4dp"
                        app:iconSize="30dp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/ultTransText"
                    android:layout_width="0dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/meta_pro_bold"
                    android:gravity="center"
                    android:text="@string/ltimas_transacciones"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/fragmentContainerView"
                    android:name="com.jmlucero.alkewallet.TransactionListFragment"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ultTransText"
                    tools:layout="@layout/fragment_transaction_list" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>